src/types/tests/snapshots/tgbot__types__tests__chat__group_chat.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "type": "group",
  "id": 1,
  "title": "Group"
}
