src/types/tests/snapshots/tgbot__types__tests__chat__pin_chat_message-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "chat_id": 1,
  "disable_notification": true,
  "message_id": 2
}
