src/types/tests/snapshots/tgbot__types__tests__chat__pin_chat_message.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_id": 2
}
