src/types/tests/snapshots/tgbot__types__tests__chat__private_chat-2.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "type": "private",
  "id": 1,
  "first_name": "John"
}
