src/types/tests/snapshots/tgbot__types__tests__chat__private_chat.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "type": "private",
  "id": 1,
  "first_name": "John",
  "last_name": "Doe",
  "username": "john_doe"
}
