src/types/tests/snapshots/tgbot__types__tests__chat__private_chat_full_info.snap
---
source: src/types/tests/chat.rs
expression: expected_struct.clone()
---
{
  "id": 1,
  "type": "private",
  "accent_color_id": 0,
  "max_reaction_count": 0
}
