src/types/tests/snapshots/tgbot__types__tests__chat__promote_chat_member-3.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "can_change_info": true,
  "can_delete_messages": false,
  "can_delete_stories": true,
  "can_edit_messages": true,
  "can_edit_stories": true,
  "can_invite_users": true,
  "can_manage_chat": false,
  "can_manage_direct_messages": false,
  "can_manage_tags": false,
  "can_manage_topics": true,
  "can_manage_video_chats": true,
  "can_pin_messages": true,
  "can_post_messages": false,
  "can_post_stories": true,
  "can_promote_members": false,
  "can_restrict_members": false,
  "chat_id": 1,
  "is_anonymous": false,
  "user_id": 2
}
